--- a/CrossoutLogViewer.GUI/App.xaml
+++ b/CrossoutLogViewer.GUI/App.xaml
@@ -72,7 +72,7 @@
                 <Setter Property="BorderThickness"
                         Value="1" />
                 <Setter Property="Background"
-                        Value="Transparent" />
+                        Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
                 <Setter Property="Padding"
                         Value="1" />
                 <Setter Property="Controls:ControlsHelper.CornerRadius"
@@ -83,7 +83,7 @@
                    TargetType="{x:Type GroupBox}"
                    BasedOn="{StaticResource MahApps.Styles.GroupBox}">
                 <Setter Property="Background"
-                        Value="Transparent" />
+                        Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
                 <Setter Property="BorderThickness"
                         Value="1" />
                 <Setter Property="BorderBrush"
@@ -156,12 +156,12 @@
             <Style x:Key="Button.Outline"
                    BasedOn="{StaticResource MahApps.Styles.Button.Flat}"
                    TargetType="{x:Type Button}">
-                <Setter Property="Background"
-                        Value="Transparent" />
                 <Setter Property="BorderBrush"
                         Value="{DynamicResource MahApps.Brushes.Gray4}" />
                 <Setter Property="Foreground"
                         Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
+                <Setter Property="Background"
+                        Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
                 <Setter Property="BorderThickness"
                         Value="1" />
                 <Setter Property="Controls:ControlsHelper.CornerRadius"
@@ -170,12 +170,12 @@
             <Style x:Key="ToggleButton.Outline"
                    BasedOn="{StaticResource MahApps.Styles.ToggleButton.Flat}"
                    TargetType="{x:Type ToggleButton}">
-                <Setter Property="Background"
-                        Value="Transparent" />
                 <Setter Property="BorderBrush"
                         Value="{DynamicResource MahApps.Brushes.Gray4}" />
                 <Setter Property="Foreground"
                         Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
+                <Setter Property="Background"
+                        Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
                 <Setter Property="BorderThickness"
                         Value="1" />
                 <Setter Property="Controls:ControlsHelper.CornerRadius"
@@ -194,26 +194,26 @@
             <Style x:Key="Button.Free"
                    BasedOn="{StaticResource MahApps.Styles.Button.Flat}"
                    TargetType="{x:Type Button}">
-                <Setter Property="Background"
-                        Value="Transparent" />
                 <Setter Property="BorderThickness"
                         Value="0" />
                 <Setter Property="Controls:ControlsHelper.CornerRadius"
                         Value="3" />
                 <Setter Property="Foreground"
                         Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
+                <Setter Property="Background"
+                        Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
             </Style>
             <Style x:Key="ToggleButton.Free"
                    BasedOn="{StaticResource MahApps.Styles.ToggleButton.Flat}"
                    TargetType="{x:Type ToggleButton}">
-                <Setter Property="Background"
-                        Value="Transparent" />
                 <Setter Property="BorderThickness"
                         Value="0" />
                 <Setter Property="Controls:ControlsHelper.CornerRadius"
                         Value="3" />
                 <Setter Property="Foreground"
                         Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
+                <Setter Property="Background"
+                        Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
                 <Style.Triggers>
                     <Trigger Property="IsChecked"
                              Value="True">
