--- a/CrossoutLogViewer.GUI/Controls/PartyControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/PartyControl.xaml
@@ -26,50 +26,49 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Border Style="{DynamicResource BorderStyle.Highlight}"
-                            Background="{DynamicResource MahApps.Brushes.Gray.SemiTransparent}"
-                            BorderThickness="0"
+                            Background="{DynamicResource MahApps.Brushes.Control.Background}"
                             HorizontalAlignment="Left"
                             Margin="4,4,4,8">
                         <Border.Effect>
                             <DropShadowEffect />
                         </Border.Effect>
-                        <StackPanel DataContext="{Binding .}"
-                                    Orientation="Vertical"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Top">
-                            <StackPanel Orientation="Horizontal"
-                                        Margin="0,4,0,4">
-                                <local:UserOverview DataContext="{Binding .}"
-                                                    DamageGroupVisibility="Collapsed"
-                                                    StatDisplayVisibility="Collapsed" />
-                                <Button Content="{Binding Source={StaticResource res}, Path=.[Party_OpenGames]}"
-                                        Style="{DynamicResource Button.Outline}"
-                                        Click="Button_PartyGames_Click"
-                                        VerticalAlignment="Center"
-                                        Margin="8,0,0,0" />
-                                <Button Content="{Binding Source={StaticResource res}, Path=.[Games_OpenUsers]}"
-                                        Style="{DynamicResource Button.Outline}"
-                                        Click="Button_PartyUsers_Click"
-                                        VerticalAlignment="Center"
-                                        Margin="4,0,0,0" />
-                            </StackPanel>
-                            <Expander Header="{Binding Path=., Converter={StaticResource PartyUsersConverter}}"
-                                      Controls:HeaderedControlHelper.HeaderFontSize="14"
-                                      IsExpanded="{Binding UsersExpanded, Mode=TwoWay}"
-                                      Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
-                                <StackPanel Orientation="Vertical">
-                                    <local:UserOverview DataContext="{Binding ElementName=UserDateGrid, Path=SelectedItem}"
-                                                        GameStatGroupVisibility="Collapsed"
-                                                        Margin="0,0,0,4" />
-                                    <local:UserDataGrid x:Name="UserDateGrid"
-                                                        ItemsSource="{Binding Users}"
-                                                        SelectedIndex="0"
-                                                        SelectedItem="{Binding SelectedUser, Mode=TwoWay}"
-                                                        PreviewMouseWheel="UserDateGrid_PreviewMouseWheel"
-                                                        OpenViewModel="UserDateGrid_OpenViewModel" />
+                            <StackPanel DataContext="{Binding .}"
+                                        Orientation="Vertical"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Top">
+                                <StackPanel Orientation="Horizontal"
+                                            Margin="0,4,0,4">
+                                    <local:UserOverview DataContext="{Binding .}"
+                                                        DamageGroupVisibility="Collapsed"
+                                                        StatDisplayVisibility="Collapsed" />
+                                    <Button Content="{Binding Source={StaticResource res}, Path=.[Party_OpenGames]}"
+                                            Style="{DynamicResource Button.Outline}"
+                                            Click="Button_PartyGames_Click"
+                                            VerticalAlignment="Center"
+                                            Margin="8,0,0,0" />
+                                    <Button Content="{Binding Source={StaticResource res}, Path=.[Games_OpenUsers]}"
+                                            Style="{DynamicResource Button.Outline}"
+                                            Click="Button_PartyUsers_Click"
+                                            VerticalAlignment="Center"
+                                            Margin="4,0,0,0" />
                                 </StackPanel>
-                            </Expander>
-                        </StackPanel>
+                                <Expander Header="{Binding Path=., Converter={StaticResource PartyUsersConverter}}"
+                                          Controls:HeaderedControlHelper.HeaderFontSize="14"
+                                          IsExpanded="{Binding UsersExpanded, Mode=TwoWay}"
+                                          Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
+                                    <StackPanel Orientation="Vertical">
+                                        <local:UserOverview DataContext="{Binding ElementName=UserDateGrid, Path=SelectedItem}"
+                                                            GameStatGroupVisibility="Collapsed"
+                                                            Margin="0,0,0,4" />
+                                        <local:UserDataGrid x:Name="UserDateGrid"
+                                                            ItemsSource="{Binding Users}"
+                                                            SelectedIndex="0"
+                                                            SelectedItem="{Binding SelectedUser, Mode=TwoWay}"
+                                                            PreviewMouseWheel="UserDateGrid_PreviewMouseWheel"
+                                                            OpenViewModel="UserDateGrid_OpenViewModel" />
+                                    </StackPanel>
+                                </Expander>
+                            </StackPanel>
                     </Border>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
